checkout icon alignment issue fix
seller registration terms & condition checkout checkout icon alignment issue fixing

--- a/client/src/scss/style.all-account.scss
+++ b/client/src/scss/style.all-account.scss
@@ -306,6 +306,11 @@ input.form-control {
 		font-weight: 400;	
 	}	
 }	
+input.width-checkout {
+    width: 13px!important;
+    margin-right: 6px;
+    margin-left: -10px;
+}
 .rounded-1 {	
     border-radius: 1.25rem !important;	
 }	
